fix: z-index maintenability (#194)

--- a/packages/banner/addon/styles/components/_nucleus-banner.scss
+++ b/packages/banner/addon/styles/components/_nucleus-banner.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 999;
+  z-index: map-get($nucleus-zindex, banner);
   background: white;
   justify-content: center;
   align-items: center;
