--- a/packages/table/addon/styles/components/_nucleus-table.scss
+++ b/packages/table/addon/styles/components/_nucleus-table.scss
@@ -109,7 +109,7 @@
       position: absolute;
       top: 0;
       right: 0;
-      z-index: 9;
+      z-index: map-get($nucleus-zindex, nine);
       height: 48px;
       width: 48px;
       background: $color-milk;
